<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="25dp"
    tools:context="com.jingmail.suli.androidlabs.WeatherForecast">

    <ImageView
        android:id="@+id/temperatureImageView"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/currentTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currentTemperature"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/minTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/minTemperature"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/maxTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maxTemperature"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"
        />

</LinearLayout>
